force-app/main/default/objects/SVG_Icon__c/SVG_Icon__c.object-meta.xml
<CustomObject>
    <description>In this object I just store the SVG code and SVG label for HTML an JS</description>
    <label>SVG Icon</label>
    <nameField>
        <label>SVG Icon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SVG Icon</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>