force-app/main/default/objects/SVG_Icon__c/fields/Menu_Rank__c.field-meta.xml
<CustomField>
    <fullName>Menu_Rank__c</fullName>
    <label>Menu Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>