force-app/main/default/objects/SVG_Icon__c/fields/SVG_Code__c.field-meta.xml
<CustomField>
    <fullName>SVG_Code__c</fullName>
    <label>SVG Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>