force-app/main/default/objects/SVG_Icon__c/fields/SVG_Functional_Context__c.field-meta.xml
<CustomField>
    <fullName>SVG_Functional_Context__c</fullName>
    <label>SVG Functional Context</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Menu</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>