force-app/main/default/objects/SVG_Icon__c/fields/SVG_Label__c.field-meta.xml
<CustomField>
    <fullName>SVG_Label__c</fullName>
    <label>SVG Label</label>
    <length>75</length>
    <type>Text</type>
</CustomField>